Fixing some small errors